...
                            <constraint firstItem="vYN-5M-awE" firstAttribute="bottom" secondItem="dl2-Hs-8PH" secondAttribute="bottom" id="k33-5w-Pqt"/>
                            <constraint firstAttribute="leading" secondItem="vYN-5M-awE" secondAttribute="leading" id="nEW-Yf-us5"/>
                            <constraint firstItem="rGL-tq-B12" firstAttribute="top" secondItem="rRM-18-dYh" secondAttribute="bottomMargin" id="w5u-gF-Okq"/>
                        </constraints>
                    </view>
                    <toolbarItems>
                        <barButtonItem title="Edit" id="Ksa-Pd-Mv5">
                            <connections>
                                <action selector="onEditPressed:" destination="aq5-lx-Pms" id="u4l-M0-guB"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Bookmarks" id="oMv-60-GGW">
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="RuZ-zV-tu8">
                            <connections>
                                <action selector="onDonePressed:" destination="aq5-lx-Pms" id="7U4-5t-4Re"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
...
                                <rect key="frame" x="16" y="143.5" width="343" height="43.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9HA-wp-hud" id="c4D-ft-gHh">
                                    <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEJ-T8-Tdl">
                                            <rect key="frame" x="148" y="12" width="47" height="19.5"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" name="DownloadsListDestructiveColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
...
