...
                                                    <constraints>
                                                        <constraint firstAttribute="width" priority="999" constant="26" id="bIP-ra-VYG"/>
                                                    </constraints>
                                                </imageView>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tlF-fr-tSl" customClass="SiteRatingView" customModule="DuckDuckGo" customModuleProvider="target">
                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="40"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="siteRating">
                                                        <accessibilityTraits key="traits" notEnabled="YES"/>
                                                        <bool key="isElement" value="NO"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" priority="900" constant="30" id="vqc-wd-f2C"/>
                                                    </constraints>
...
                                                <outletCollection property="trackerIconConstraints" destination="nZr-Xv-4SO" collectionClass="NSMutableArray" id="Y5X-nB-a50"/>
                                            </connections>
                                        </view>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fqM-N4-jNd" customClass="TextFieldWithInsets" customModule="DuckDuckGo" customModuleProvider="target"
                                            <rect key="frame" x="30" y="0.0" width="345" height="40"/>
                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="searchEntry">
                                                <accessibilityTraits key="traits" searchField="YES"/>
                                                <bool key="isElement" value="YES"/>
                                            </accessibility>
                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="16"/>
                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" smartQuotesType="no"/>
...
                            <connections>
                                <action selector="onSettingsButtonPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="Vtp-d6-wPM"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJo-2d-gri">
                            <rect key="frame" x="108" y="0.0" width="30" height="24"/>
                            <accessibility key="accessibilityConfiguration" label="Browsing Menu"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="30" id="JrJ-da-Qn3"/>
                            </constraints>
                            <state key="normal" image="Menu"/>
                            <connections>
                                <action selector="onMenuButtonPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="Ixc-Oz-zYw"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHT-9R-ERy">
                            <rect key="frame" x="162" y="0.0" width="64" height="24"/>
...
