...
            <subviews>
                <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FireBackground" translatesAutoresizingMaskIntoConstraints="NO" id="0v3-0f-TuT">
                    <rect key="frame" x="-8" y="-8" width="60" height="60"/>
                </imageView>
                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K23-H6-0Rl">
                    <rect key="frame" x="0.0" y="0.5" width="44" height="44"/>
                    <state key="normal" image="Fire"/>
                    <connections>
                        <action selector="onClick" destination="YwJ-Cm-1hD" eventType="touchUpInside" id="bqd-FG-nwq"/>
                    </connections>
                </button>
            </subviews>
            <gestureRecognizers/>
...
