...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xnc-eB-mv9">
                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                <items>
                                    <barButtonItem image="Fire" id="TRA-Ar-QQG">
                                        <connections>
                                            <action selector="onCloseAllPressed:" destination="BuT-4g-3wv" id="013-re-8Y4"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Hcf-tt-cj2"/>
                                    <barButtonItem image="Add" id="W6D-qX-ZGP">
                                        <connections>
                                            <action selector="onAddPressed:" destination="BuT-4g-3wv" id="xaG-oQ-Shb"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Bv6-DF-EOX"/>
                                    <barButtonItem title="Done" id="8fV-rQ-Vp6">
                                        <connections>
                                            <action selector="onDonePressed:" destination="BuT-4g-3wv" id="9Ec-cM-5Nn"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
